--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,10 @@ input {
   padding-right: 200px;
 }
 
+.home-image {
+  width: 100%;
+}
+
 .navbar .logo-img {
   width: 184px;
 }
@@ -45,21 +49,27 @@ input {
   display: flex;
   gap: 5px;
 }
+
 .login-button {
   cursor: pointer;
-}
-
-.home-image {
-  width: 100%;
+  width: 32px;
+  height: 34px;
 }
 
 .account {
   display: flex;
   flex-direction: column;
-  background-color: grey;
-  width: 70px;
-  height: 70px;
-  color: white;
+  justify-content: center;
+  align-items: center;
+  background-color: #3e3e3e;
+  width: 80px;
+  height: 80px;
+}
+
+.user-label {
+  color: rgb(250, 250, 250);
+  font-size: 13px;
+  margin-top: 3px;
 }
 
 .reactSingularKey_hftMain {
